# icfpc2019

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.txt  go.mod  go.sum
.circleci/: config.yml
chokudai/: Program.cs
chokudai/icfpc2019/: Cargo.toml
cmd/launcher/: .gitignore  Makefile  generate-secret.sh  main.go
coin-ops/: iwiwi_get.sh  iwiwi_submit.sh  lambdad.py  requirements.txt
common/: Cargo.toml
common/src/: bfs.rs  bootstrap.rs  bootstrap_clone.rs  fast.rs  gen_unagi.rs  lib.rs  local_optimization.rs  main.rs  map.rs  player_state.rs  reach.rs  sim.rs  (+8 more)
dashboard/: Makefile  app.yaml  main.go  run.sh
docker/: Makefile  generate-docker-data.sh  master.Dockerfile  master.docker
go/: go.mod  go.sum
hoge/: Cargo.toml
js/: lambda.js
knapsack/: Cargo.toml  example.txt
lambda-client/: Makefile  README.md  lambda-cli.py  lambda-client  lambda.conf
phpmyadmin/: Makefile
proto/: Cargo.toml  build.rs  data.proto
puzzle/: Cargo.toml  task1.cond  task1.desc  tmp.txt
script/: aws-ubuntu-1804.json  build-aws-image-commands.sh  build-aws-image.sh  build-csharp.sh  build-gce-image-commands.sh  build-gce-image.sh  git-sync.sh  install-launcher.sh  launcher.sh  push-docker-image.sh  test-bin.sh  test-solutions.sh
secret/: docker_config.json.encrypted  service_account.json.encrypted  unagi.pem.encrypted  unagi.pub
solution-check/: Makefile  canvas.js  lambda.js  main.js  package.json
tools/: Cargo.toml
tos/: example-00-0.sol  example-00.desc  example_attack.rs  puzzle_vis.py
utils/: Cargo.toml
wata/: Cargo.toml
(+133 files in other folders)
