[workspace]
members = [
    "chokudai/icfpc2019",
    "common",
    "example/rust",
    "example/rust-hello",
    "proto",
    "tools",
    "utils",
    "wata",
    "puzzle",
    "hoge",
    "knapsack",
]
exclude = [".cache", "build"]

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false
